log
Wed 20 Mar 2024 08:13:24 PM UTC: 
 tests:  0|4
total_score: 10/70
7629c82
Wed 20 Mar 2024 08:28:14 PM UTC: 
 exercises.c | 18 ++++++++++++++----
 1 file changed, 14 insertions(+), 4 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:53:7: error: implicit declaration of function ‘push_back’; did you mean ‘pushBack’? [-Werror=implicit-function-declaration]
   53 |       push_back(lista, *d);
      |       ^~~~~~~~~
      |       pushBack
cc1: all warnings being treated as errors
Compilation failed
32212ea
Wed 20 Mar 2024 08:28:36 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:53:23: error: passing argument 2 of ‘pushBack’ makes pointer from integer without a cast [-Werror=int-conversion]
   53 |       pushBack(lista, *d);
      |                       ^~
      |                       |
      |                       int
In file included from exercises.c:6,
                 from test.c:5:
arraylist.h:20:30: note: expected ‘void *’ but argument is of type ‘int’
   20 | void pushBack(List *L, void *dato);
      |                        ~~~~~~^~~~
cc1: all warnings being treated as errors
Compilation failed
9ceb4e8
Wed 20 Mar 2024 08:29:39 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:49:8: error: expected expression before ‘int’
   49 |   for(*int i = 0; i < 10; i++)
      |        ^~~
exercises.c:49:19: error: ‘i’ undeclared (first use in this function)
   49 |   for(*int i = 0; i < 10; i++)
      |                   ^
exercises.c:49:19: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:53:23: error: passing argument 2 of ‘pushBack’ makes pointer from integer without a cast [-Werror=int-conversion]
   53 |       pushBack(lista, *d);
      |                       ^~
      |                       |
      |                       int
In file included from exercises.c:6,
                 from test.c:5:
arraylist.h:20:30: note: expected ‘void *’ but argument is of type ‘int’
   20 | void pushBack(List *L, void *dato);
      |                        ~~~~~~^~~~
cc1: all warnings being treated as errors
Compilation failed
0cc0a20
Wed 20 Mar 2024 08:29:53 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
daf20fa
Wed 20 Mar 2024 08:39:02 PM UTC: 
 exercises.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:66:9: error: ‘L’ redeclared as different kind of symbol
   66 |   List* L = create_list();
      |         ^
exercises.c:64:21: note: previous definition of ‘L’ with type ‘List *’
   64 | int sumaLista(List *L)
      |               ~~~~~~^
exercises.c:72:10: error: returning ‘List *’ from a function with return type ‘int’ makes integer from pointer without a cast [-Werror=int-conversion]
   72 |   return L;
      |          ^
cc1: all warnings being treated as errors
Compilation failed
47a6c83
Wed 20 Mar 2024 08:39:32 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:66:8: error: ‘L’ redeclared as different kind of symbol
   66 |   int* L = create_list();
      |        ^
exercises.c:64:21: note: previous definition of ‘L’ with type ‘List *’
   64 | int sumaLista(List *L)
      |               ~~~~~~^
exercises.c:66:12: error: initialization of ‘int *’ from incompatible pointer type ‘List *’ [-Werror=incompatible-pointer-types]
   66 |   int* L = create_list();
      |            ^~~~~~~~~~~
exercises.c:70:14: error: passing argument 1 of ‘pushBack’ from incompatible pointer type [-Werror=incompatible-pointer-types]
   70 |     pushBack(L, d++);
      |              ^
      |              |
      |              int *
In file included from exercises.c:6,
                 from test.c:5:
arraylist.h:20:21: note: expected ‘List *’ but argument is of type ‘int *’
   20 | void pushBack(List *L, void *dato);
      |               ~~~~~~^
In file included from test.c:5:
exercises.c:72:10: error: returning ‘int *’ from a function with return type ‘int’ makes integer from pointer without a cast [-Werror=int-conversion]
   72 |   return L;
      |          ^
cc1: all warnings being treated as errors
Compilation failed
5efc8f7
